<resources>
    <string name="app_name">Resume2</string>
    <string name="app_title">Resume</string>
    <string name="full_name">Full Name</string>
    <string name="hint_name">FULL NAME</string>
    <string name="personal_info">PERSONAL DETAILS</string>
    <string name="hint_phonenumber">PHONE NUMBER</string>
    <string name="hint_email">E-MAIL</string>
    <string name="hint_address">ADDRESS</string>
    <string name="languages_speaks">LANGUAGES SPEAKS</string>
    <string name="languages_english">ENGLISH</string>
    <string name="languages_hindi">HINDI</string>
    <string name="languages_gujarati">GUJARATI</string>
    <string name="languages_marathi">MARATHI</string>
    <string name="gender">GENDER</string>
    <string name="gender_male">MALE</string>
    <string name="gender_female">FEMALE</string>
    <string name="gender_other">OTHER</string>
    <string name="marital_status">MARITAL STATUS</string>
    <string name="single_status">UNMARRIED</string>
    <string name="married_status">MARRIED</string>
    <string name="your_hobbies">HOBBIES</string>
    <string name="hobby_singing">SINGING</string>
    <string name="hobby_dancing">DANCING</string>
    <string name="hobby_travelling">TRAVELLING</string>
    <string name="hobby_reading">READING</string>
    <string name="hobby_movies">MOVIES</string>
    <string name="hobby_learning">LEARNING</string>
    <string name="hobby_playing">PLAYING</string>
    <string name="hobby_writing">WRITING</string>
    <string name="educational_details">EDUCATIONAL DETAILS</string>
    <string name="class_name">Class</string>
    <string name="class_std">10th</string>
    <string name="class_stad">12th</string>
    <string name="class_graduation">Graduation</string>
    <string name="class_per">%</string>
    <string name="class_year">YEAR</string>
    <string name="past_job">PAST JOB EXPERIENCE</string>
    <string name="hint_experience">EXPERIENCE</string>
    <string name="your_skill">SKILL</string>
    <string name="skill_coding">CODING</string>
    <string name="skill_creativity">CREATIVITY</string>
    <string name="skill_leadership">LEADERSHIP</string>
    <string name="skill_teamwork">TEAM WORK</string>
    <string name="skill_marketing">MARKETING</string>
    <string name="skill_learning">LEARNING</string>
    <string name="submit_button">Submit</string>
    <string name="hint_job">EXPERIENCE</string>
    <string name="hobby">HOBBY</string>
    <string name="languages">Languages</string>
    <string name="button_1">Submit</string>
    <string name="name">Hetal Dangar</string>
    <string name="contect_info">CONTECT INFO</string>
    <string name="h_address">ADDRESS  :</string>
    <string name="contact_me">CONTACT </string>
    <string name="button1">Education </string>
    <string name="button2">Skill </string>
    <string name="edu_year">Year :</string>
    <string name="per_mark">10th :</string>
    <string name="per_mark12">12th :</string>
    <string name="phone_no">Phone :</string>
    <string name="e_mail">E-Mail :</string>
    <string name="address">Addrerss :</string>
    <string name="education">EDUCATION </string>
    <string name="my_skill">SKILL </string>
    <string name="job_experience">EXPERIENCE </string>
    <string name="your_hobby">HOBBY </string>
    <string name="text_number">7567374081 </string>


</resources>