<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResumeActivity4">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10ssp"
            android:src="@drawable/girl3"

            />

        <LinearLayout
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtname"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="@dimen/_20ssp"
                android:gravity="center"

                android:text="Hetal dangar"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtwork"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:gravity="center"

                android:text="Android Devloper"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="603dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="172dp"
            android:layout_height="match_parent"
            android:background="#815E5C5C"
            android:orientation="vertical">


            <TextView
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/education"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/per_mark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtmark10"
                    android:layout_width="86dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="78%"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/edu_year"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/txtyear10"
                    android:layout_width="86dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/per_mark12"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txtmark12"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:text="84%"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/edu_year"

                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/txtyear12"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="248dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/my_skill"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="10dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="Coding"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="10dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="Creativity"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="10dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="Leadership"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="10dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="Team work"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="10dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="Marketing"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:text="@string/your_hobby"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="10dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:text="reading"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="10dp"
                        android:layout_margin="@dimen/_10sdp"
                        android:src="@drawable/circle" />

                    <TextView
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:text="playing"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="236dp"
            android:layout_height="616dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"

                android:layout_marginTop="20dp"
                android:text="@string/contact_me"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/phone_no"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginLeft="@dimen/_10sdp"

                    android:hint="@string/text_number"


                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/e_mail"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtemail"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="hetaldangar510@gmail.com"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="129dp"
                android:layout_height="97dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/address"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtaddress"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="15,sapna"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="213dp"



                android:orientation="vertical">

                <TextView
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:text="@string/job_experience"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/edu_year"

                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView

                        android:id="@+id/txtyearexperience"
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
